--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -140,14 +140,14 @@ body{
         box-sizing: content-box;
         position: fixed;
         top:0;
-        right: -100%;
+        left: 100%;
         width: calc(500px - 17px);
         height: 100%;
         background-color: $form-bg;
         z-index: 4;
-        transition: right .5s ease;
+        transition: left .5s ease;
         &.mobile-nav_act{
-            right: 0;
+            left: calc(100% - 480px);
         }
         .mobile-nav__head{
             color:$form-color;
@@ -248,6 +248,15 @@ body{
         }
     }
 }
+@media screen and (max-width:700px){
+    .mobile-nav{
+        width: 100% !important;
+        &.mobile-nav_act{
+            left: 0;
+        }
+    }
+}
+
 
 .brand{
     display: flex;
@@ -342,13 +351,21 @@ body{
         }
     }
     &.header-content__mt{
-        margin-top: 50px;
+        margin-top: clamp(0rem, -0.551rem + 2.94vw, 3.125rem);
+    }
+}
+@media screen and (max-width:1000px){
+    .header-content{
+        grid-template-columns: 12fr;
+        .swiper{
+            display: none;
+        }
     }
 }
 
 .title{
     color:$main-color;
-    font-size: 40px;
+    font-size: clamp(1.5rem, 1.235rem + 1.41vw, 3rem);
     max-width: 500px;
     text-wrap: balance;
 }
@@ -367,7 +384,8 @@ body{
         .benefits__icon{
             width: 40px;
             height: 40px;
-            background-color: $secondary-bg;
+            background-color: rgba(139, 139, 139, 0.3);
+            backdrop-filter: blur(2px);
             border-radius: 10px;
             display: flex;
             align-items: center;
@@ -409,14 +427,14 @@ body{
 }
 
 .conditions{  
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4,3fr);
     gap: 20px;
     margin-top: auto;
     &.conditions_mt{
-        margin-top: 140px;
+        margin-top: clamp(1.875rem, 0.441rem + 7.65vw, 10rem);
     }
     .conditions__item{
-        flex: 1 1 25%;
         padding: 15px;
         background-color: rgba(139, 139, 139, 0.3);
         backdrop-filter: blur(2px);
@@ -475,16 +493,28 @@ body{
         }
     }
 }
+@media screen and (max-width:900px){
+    .conditions{  
+        display: grid;
+        grid-template-columns: repeat(2,6fr);
+    }
+}
+@media screen and (max-width:660px){
+    .conditions{  
+        display: grid;
+        grid-template-columns: 12fr;
+    }
+}
 
 // Секция с нашей техникой
 
 .section-title{
     text-align: center;
     color: $base-color-dark;
-    font-size: 36px;
+    font-size: clamp(1.688rem, 1.588rem + 0.53vw, 2.25rem);
     text-transform: uppercase;
     &.section-title_mt{
-        margin: 80px 0;
+        margin: clamp(3.125rem, 2.794rem + 1.76vw, 5rem) 0;
     }
 }
 
@@ -568,21 +598,35 @@ body{
         }
     }
 }
+@media screen and (max-width:1100px){
+    .car-list{
+        grid-template-columns: repeat(2,6fr);
+    }
+}
+@media screen and (max-width:750px){
+    .car-list{
+        grid-template-columns: 12fr;
+        justify-items: center;
+        .car-list__item{
+           max-width: 450px;
+        }
+    }
+}
 
 // секция с услугами
 
 .service-grid{
     display: grid;
-    grid-template-columns: 80px 1fr;
-    column-gap: 100px;
+    grid-template-columns: auto 1fr;
+    column-gap: clamp(0.625rem, -0.368rem + 5.29vw, 6.25rem);
     .service-grid__path{
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         .service-grid__circle{
-            width: 80px;
-            height: 80px;
+            width: clamp(3.438rem, 3.162rem + 1.47vw, 5rem);
+            height: clamp(3.438rem, 3.162rem + 1.47vw, 5rem);
             border: 4px solid rgb(197, 197, 197);
             border-radius: 50%;
             transition: all .3s ease;
@@ -591,7 +635,7 @@ body{
             justify-content: center;
             &::before{
                 content: '\f2ed';
-                font-size: 40px;
+                font-size: clamp(1.563rem, 1.397rem + 0.88vw, 2.5rem);
                 color: rgb(197, 197, 197);
                 font-weight: 900;
                 font-family: $awesome-font;
@@ -631,7 +675,7 @@ body{
         }
         .service-grid__line{
             width: 4px;
-            height: calc(100% - 80px);
+            height: calc(100% - clamp(3.438rem, 3.162rem + 1.47vw, 5rem));
             background-color: rgb(197, 197, 197);
             position: relative;
             overflow: hidden;
@@ -647,9 +691,10 @@ body{
     .service-grid__content{
         .service-grid__header{
             display: inline-block;
-            margin: 40px 0;
+            margin-top: 40px;
+            margin-bottom: clamp(0.625rem, 0.294rem + 1.76vw, 2.5rem);
                 .service-grid__title{
-                    font-size: 36px;
+                    font-size: clamp(1.375rem, 1.221rem + 0.82vw, 2.25rem);
                     text-align: start;
                     text-wrap: balance;
                 }
@@ -657,13 +702,13 @@ body{
                     text-align: start;
                     color: $main-color;
                     font-weight: 500;
-                    font-size: 20px;
+                    font-size: clamp(1rem, 0.956rem + 0.24vw, 1.25rem);
                 }
         }
         .service-grid__text{
             margin-bottom: 10px;
             font-weight: 500;
-            font-size: 18px;
+            font-size: clamp(0.938rem, 0.904rem + 0.18vw, 1.125rem);
         }
     }
 }
@@ -858,6 +903,10 @@ body{
     .plan-grid{
         display: grid;
         grid-template-columns:  12fr;
+        justify-items: center;
+        .plan-grid__step{
+            max-width: 500px;
+        }
         .hollow-div-md{
             display: none;
         }
@@ -979,6 +1028,33 @@ body{
         }
     }
 }
+@media screen and (max-width:1100px){
+    .feedback-grid{
+        grid-template-columns: 12fr;
+    }
+    .accordion{
+        grid-row-start: 1;
+    }
+}
+@media screen and (max-width:780px){
+    .feedback-grid{
+        justify-items: center;
+    }
+    .accordion{
+        max-width: 500px;
+    }
+    .wrap-feedback{
+        max-width: 500px;
+        flex-direction: column;
+        gap: 20px;
+        .wrap-feedback__btn{
+            margin-top: 20px !important;
+        }
+        .wrap-feedback__img{
+            display: none;
+        }
+    }
+}
 
 // Футер сайта
 
@@ -1041,7 +1117,42 @@ body{
         }
     }
 }
-
+@media screen and (max-width:1050px){
+    .footer{
+        .footer-grid{
+            grid-template-columns: 4fr 1fr 3fr 3fr 1fr;
+        }
+    }
+}
+@media screen and (max-width:850px){
+    .footer{
+        .footer-grid{
+            grid-template-columns: 6fr 6fr;
+            gap: 30px;
+            .footer-grid__brand{
+                grid-column-start: 1;
+                grid-column-end: 3;
+            }
+            .footer-grid__contacts{
+                grid-column-start: 1;
+            }
+            .footer-grid__navigation{
+                grid-column-start: 2;
+            }
+        }
+    }
+}
+@media screen and (max-width:500px){
+    .footer{
+        .footer-grid{
+            grid-template-columns: 12fr;
+            gap: 30px;
+            .footer-grid__navigation{
+                grid-column-start: 1;
+            }
+        }
+    }
+}
 // Всплывающее окно с формой обратной связи
 
 .overblock{
@@ -1145,7 +1256,7 @@ body{
                     gap: 10px;
                     align-items: center;
                     .popup__radio-div{
-                        width: 20px;
+                        min-width: 20px;
                         height: 20px;
                         border-radius: 50%;
                         border: 2px solid $main-bg;
@@ -1298,6 +1409,14 @@ body{
             }
         }
         
+    }
+}
+@media screen and (max-width:700px){
+    .popup{
+        width: 100% !important;
+        &.popup_act{
+            left: 0;
+        }
     }
 }
 .popup__btn-slide{
