--- a/css/style.css
+++ b/css/style.css
@@ -185,16 +185,16 @@ body.lock {
             box-sizing: content-box;
     position: fixed;
     top: 0;
-    right: -100%;
+    left: 100%;
     width: 483px;
     height: 100%;
     background-color: rgb(71, 74, 81);
     z-index: 4;
-    -webkit-transition: right 0.5s ease;
-    transition: right 0.5s ease;
+    -webkit-transition: left 0.5s ease;
+    transition: left 0.5s ease;
   }
   .mobile-nav.mobile-nav_act {
-    right: 0;
+    left: calc(100% - 480px);
   }
   .mobile-nav .mobile-nav__head {
     color: rgb(242, 242, 242);
@@ -317,6 +317,14 @@ body.lock {
   }
   .nav .nav__contacts {
     display: none;
+  }
+}
+@media screen and (max-width: 700px) {
+  .mobile-nav {
+    width: 100% !important;
+  }
+  .mobile-nav.mobile-nav_act {
+    left: 0;
   }
 }
 .brand {
@@ -442,12 +450,21 @@ body.lock {
   font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
 }
 .header-content.header-content__mt {
-  margin-top: 50px;
+  margin-top: clamp(0rem, -0.551rem + 2.94vw, 3.125rem);
 }
 
+@media screen and (max-width: 1000px) {
+  .header-content {
+    -ms-grid-columns: 12fr;
+    grid-template-columns: 12fr;
+  }
+  .header-content .swiper {
+    display: none;
+  }
+}
 .title {
   color: rgb(255, 191, 0);
-  font-size: 40px;
+  font-size: clamp(1.5rem, 1.235rem + 1.41vw, 3rem);
   max-width: 500px;
   text-wrap: balance;
 }
@@ -477,7 +494,9 @@ body.lock {
 .benefits .benefits__item .benefits__icon {
   width: 40px;
   height: 40px;
-  background-color: rgb(17, 197, 17);
+  background-color: rgba(139, 139, 139, 0.3);
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
   border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -523,19 +542,17 @@ body.lock {
 }
 
 .conditions {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 20px 3fr 20px 3fr 20px 3fr;
+  grid-template-columns: repeat(4, 3fr);
   gap: 20px;
   margin-top: auto;
 }
 .conditions.conditions_mt {
-  margin-top: 140px;
+  margin-top: clamp(1.875rem, 0.441rem + 7.65vw, 10rem);
 }
 .conditions .conditions__item {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 25%;
-          flex: 1 1 25%;
   padding: 15px;
   background-color: rgba(139, 139, 139, 0.3);
   -webkit-backdrop-filter: blur(2px);
@@ -605,14 +622,30 @@ body.lock {
   z-index: 2;
 }
 
+@media screen and (max-width: 900px) {
+  .conditions {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (6fr)[2];
+    grid-template-columns: repeat(2, 6fr);
+  }
+}
+@media screen and (max-width: 660px) {
+  .conditions {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 12fr;
+    grid-template-columns: 12fr;
+  }
+}
 .section-title {
   text-align: center;
   color: black;
-  font-size: 36px;
+  font-size: clamp(1.688rem, 1.588rem + 0.53vw, 2.25rem);
   text-transform: uppercase;
 }
 .section-title.section-title_mt {
-  margin: 80px 0;
+  margin: clamp(3.125rem, 2.794rem + 1.76vw, 5rem) 0;
 }
 
 .car-list {
@@ -725,14 +758,30 @@ body.lock {
   margin-right: auto;
 }
 
+@media screen and (max-width: 1100px) {
+  .car-list {
+    -ms-grid-columns: (6fr)[2];
+    grid-template-columns: repeat(2, 6fr);
+  }
+}
+@media screen and (max-width: 750px) {
+  .car-list {
+    -ms-grid-columns: 12fr;
+    grid-template-columns: 12fr;
+    justify-items: center;
+  }
+  .car-list .car-list__item {
+    max-width: 450px;
+  }
+}
 .service-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 80px 100px 1fr;
-  grid-template-columns: 80px 1fr;
-  -webkit-column-gap: 100px;
-     -moz-column-gap: 100px;
-          column-gap: 100px;
+  -ms-grid-columns: auto clamp(0.625rem, -0.368rem + 5.29vw, 6.25rem) 1fr;
+  grid-template-columns: auto 1fr;
+  -webkit-column-gap: clamp(0.625rem, -0.368rem + 5.29vw, 6.25rem);
+     -moz-column-gap: clamp(0.625rem, -0.368rem + 5.29vw, 6.25rem);
+          column-gap: clamp(0.625rem, -0.368rem + 5.29vw, 6.25rem);
 }
 .service-grid .service-grid__path {
   display: -webkit-box;
@@ -750,8 +799,8 @@ body.lock {
           justify-content: center;
 }
 .service-grid .service-grid__path .service-grid__circle {
-  width: 80px;
-  height: 80px;
+  width: clamp(3.438rem, 3.162rem + 1.47vw, 5rem);
+  height: clamp(3.438rem, 3.162rem + 1.47vw, 5rem);
   border: 4px solid rgb(197, 197, 197);
   border-radius: 50%;
   -webkit-transition: all 0.3s ease;
@@ -768,7 +817,7 @@ body.lock {
 }
 .service-grid .service-grid__path .service-grid__circle::before {
   content: "\f2ed";
-  font-size: 40px;
+  font-size: clamp(1.563rem, 1.397rem + 0.88vw, 2.5rem);
   color: rgb(197, 197, 197);
   font-weight: 900;
   font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
@@ -821,7 +870,7 @@ body.lock {
 }
 .service-grid .service-grid__path .service-grid__line {
   width: 4px;
-  height: calc(100% - 80px);
+  height: calc(100% - clamp(3.438rem, 3.162rem + 1.47vw, 5rem));
   background-color: rgb(197, 197, 197);
   position: relative;
   overflow: hidden;
@@ -835,10 +884,11 @@ body.lock {
 }
 .service-grid .service-grid__content .service-grid__header {
   display: inline-block;
-  margin: 40px 0;
+  margin-top: 40px;
+  margin-bottom: clamp(0.625rem, 0.294rem + 1.76vw, 2.5rem);
 }
 .service-grid .service-grid__content .service-grid__header .service-grid__title {
-  font-size: 36px;
+  font-size: clamp(1.375rem, 1.221rem + 0.82vw, 2.25rem);
   text-align: start;
   text-wrap: balance;
 }
@@ -846,12 +896,12 @@ body.lock {
   text-align: start;
   color: rgb(255, 191, 0);
   font-weight: 500;
-  font-size: 20px;
+  font-size: clamp(1rem, 0.956rem + 0.24vw, 1.25rem);
 }
 .service-grid .service-grid__content .service-grid__text {
   margin-bottom: 10px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: clamp(0.938rem, 0.904rem + 0.18vw, 1.125rem);
 }
 
 .plan-grid {
@@ -1152,6 +1202,10 @@ body.lock {
     display: grid;
     -ms-grid-columns: 12fr;
     grid-template-columns: 12fr;
+    justify-items: center;
+  }
+  .plan-grid .plan-grid__step {
+    max-width: 500px;
   }
   .plan-grid .hollow-div-md {
     display: none;
@@ -1301,6 +1355,38 @@ body.lock {
   margin-top: 5px;
 }
 
+@media screen and (max-width: 1100px) {
+  .feedback-grid {
+    -ms-grid-columns: 12fr;
+    grid-template-columns: 12fr;
+  }
+  .accordion {
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+  }
+}
+@media screen and (max-width: 780px) {
+  .feedback-grid {
+    justify-items: center;
+  }
+  .accordion {
+    max-width: 500px;
+  }
+  .wrap-feedback {
+    max-width: 500px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+  }
+  .wrap-feedback .wrap-feedback__btn {
+    margin-top: 20px !important;
+  }
+  .wrap-feedback .wrap-feedback__img {
+    display: none;
+  }
+}
 .footer {
   background-color: rgb(55, 19, 19);
   padding: 80px 20px 80px 20px;
@@ -1369,6 +1455,44 @@ body.lock {
   width: 100%;
 }
 
+@media screen and (max-width: 1050px) {
+  .footer .footer-grid {
+    -ms-grid-columns: 4fr 1fr 3fr 3fr 1fr;
+    grid-template-columns: 4fr 1fr 3fr 3fr 1fr;
+  }
+}
+@media screen and (max-width: 850px) {
+  .footer .footer-grid {
+    -ms-grid-columns: 6fr 30px 6fr;
+    grid-template-columns: 6fr 6fr;
+    gap: 30px;
+  }
+  .footer .footer-grid .footer-grid__brand {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    -ms-grid-column-span: 2;
+    grid-column-end: 3;
+  }
+  .footer .footer-grid .footer-grid__contacts {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+  }
+  .footer .footer-grid .footer-grid__navigation {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+  }
+}
+@media screen and (max-width: 500px) {
+  .footer .footer-grid {
+    -ms-grid-columns: 12fr;
+    grid-template-columns: 12fr;
+    gap: 30px;
+  }
+  .footer .footer-grid .footer-grid__navigation {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+  }
+}
 .overblock {
   position: fixed;
   top: 0;
@@ -1504,7 +1628,7 @@ body.lock {
           align-items: center;
 }
 .popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper .popup__radio-div {
-  width: 20px;
+  min-width: 20px;
   height: 20px;
   border-radius: 50%;
   border: 2px solid rgb(212, 159, 0);
@@ -1669,6 +1793,14 @@ body.lock {
   color: rgb(242, 242, 242);
 }
 
+@media screen and (max-width: 700px) {
+  .popup {
+    width: 100% !important;
+  }
+  .popup.popup_act {
+    left: 0;
+  }
+}
 .popup__btn-slide {
   background-color: rgb(102, 105, 114);
   padding: 10px;
